<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/skillsListFragment">

    <fragment
        android:id="@+id/skillsListFragment"
        android:name="com.example.skilltracker.ui.skills.SkillsListFragment"
        android:label="@string/skills_title">
        <action
            android:id="@+id/action_skillsListFragment_to_skillCreateFragment"
            app:destination="@id/skillCreateFragment" />
        <action
            android:id="@+id/action_skillsListFragment_to_sessionCreateFragment"
            app:destination="@id/sessionCreateFragment" />
        <action
            android:id="@+id/action_skillsListFragment_to_statsFragment"
            app:destination="@id/statsFragment" />
        <action
            android:id="@+id/action_skillsListFragment_to_skillEditFragment"
            app:destination="@id/skillEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/skillCreateFragment"
        android:name="com.example.skilltracker.ui.skills.SkillCreateFragment"
        android:label="@string/add_skill" />

    <fragment
        android:id="@+id/skillEditFragment"
        android:name="com.example.skilltracker.ui.skills.SkillEditFragment"
        android:label="@string/skill_edit_title">
        <argument
            android:name="skillId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/sessionCreateFragment"
        android:name="com.example.skilltracker.ui.sessions.SessionCreateFragment"
        android:label="@string/create_session" />

    <fragment
        android:id="@+id/sessionEditFragment"
        android:name="com.example.skilltracker.ui.sessions.SessionEditFragment"
        android:label="@string/session_edit_title">
        <argument
            android:name="sessionId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.example.skilltracker.ui.stats.StatsFragment"
        android:label="@string/stats_title">
        <action
            android:id="@+id/action_statsFragment_to_skillDetailsFragment"
            app:destination="@id/skillDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/skillDetailsFragment"
        android:name="com.example.skilltracker.ui.stats.SkillDetailsFragment"
        android:label="@string/skill_details_title">
        <argument
            android:name="skillId"
            app:argType="long" />
        <argument
            android:name="skillName"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_skillDetailsFragment_to_sessionEditFragment"
            app:destination="@id/sessionEditFragment" />
    </fragment>
</navigation>
